--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 /* CSS Custom Properties Definitions */
 :root {
-  background-color: #9FD8CB;
+  background-color: #ffffff;
   --maxWidth-none: "none";
   --maxWidth-xs: 20rem;
   --maxWidth-sm: 24rem;
@@ -27,15 +27,11 @@
   --spacing-20: 5rem;
   --spacing-24: 6rem;
   --spacing-32: 8rem;
---font-family: 'Carattere', sans-serif;
-  --fontFamily-sans: "MontserratVariable", system-ui, -apple-system,
-    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
-    "Noto Color Emoji";
-  --fontFamily-serif: "Merriweather", "Georgia", Cambria, "Times New Roman",
-    Times, serif;
-  --font-body: var(--font-family);
-  --font-heading: var(--font-family);
+  --fontFamily-sans: 'Carattere', sans-serif;
+  --fontFamily-serif: 'Libre Baskerville', sans-serif;
+  --font-body: var(--font-family-serif);
+  --font-heading: 'Carattere',
+    sans-serif;
   --fontWeight-normal: 400;
   --fontWeight-bold: 700;
   --fontWeight-black: 900;
@@ -77,7 +73,7 @@ html {
 }
 
 body {
-  font-family: var(--font-body);
+  font-family: 'Libre Baskerville',    sans-serif;
   font-size: var(--fontSize-1);
   color: var(--color-text);
 }
